Update project setup [skip ci]

--- a/subprojects/griffon-icomoonicons-javafx/gradle.properties
+++ b/subprojects/griffon-icomoonicons-javafx/gradle.properties
@@ -1,2 +1,3 @@
-publishJars = true
-projectDescription = Griffon IcoMoon Icons JavaFX Plugin
+publishJars=true
+projectDescription=Griffon IcoMoon Icons JavaFX Plugin
+projectLabels=javafx
