--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ projectWebsiteUrl=http://griffon-plugins.github.io/griffon-icomoonicons-plugin
 projectIssueTrackerUrl=https://github.com/griffon-plugins/griffon-icomoonicons-plugin/issues
 projectVcsUrl=https://github.com/griffon-plugins/griffon-icomoonicons-plugin
 javadocFooter=Copyright &copy; 2014 Andres Almiray. All rights reserved.
+projectLabels=griffon,plugin,icons,icomoon
