--- a/subprojects/griffon-icomoonicons-core/gradle.properties
+++ b/subprojects/griffon-icomoonicons-core/gradle.properties
@@ -1,2 +1,2 @@
-publishJars = true
-projectDescription = Griffon IcoMoon Icons Core Plugin
+publishJars=true
+projectDescription=Griffon IcoMoon Icons Core Plugin
