--- a/subprojects/griffon-icomoonicons-swing-groovy/gradle.properties
+++ b/subprojects/griffon-icomoonicons-swing-groovy/gradle.properties
@@ -1,2 +1,3 @@
-publishJars = true
-projectDescription = Griffon IcoMoon Icons Swing Plugin
+publishJars=true
+projectDescription=Griffon IcoMoon Icons Swing Plugin
+projectLabels=swing,groovy
